# ICLR-2026-Explorer

./: .gitignore  PHASE1_PAPERS_CSV_DESIGN.md  README.md  package-lock.json  pyproject.toml
.github/workflows/: deploy-pages.yml
data/iclr2026/: extraction_summary.json  workshops.csv  workshops_enriched.json  workshops_extraction_summary.json  workshops_raw_index.json
src/iclr_explorer/: __init__.py  build_web_data.py  build_workshop_web_data.py  detail_parser.py  extract_papers.py  extract_workshops.py  http.py  index_parser.py  models.py  parser_utils.py  schedule_parser.py  workshop_parser.py  write_outputs.py
tests/: test_build_web_data.py  test_extractors.py  test_workshops.py
tests/fixtures/: calendar.html  detail_poster.html  detail_workshop.html  index_topic.html  workshops_list.html
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
web/public/data/: workshops.json
web/src/: App.test.tsx  App.tsx  app.css  types.ts
web/src/lib/: export.test.ts  export.ts  filters.test.ts  filters.ts  storage.ts  title.test.ts  title.ts
web/src/test/: fixtures.ts  setup.ts
