[project]
name = "iclr-explorer"
version = "0.1.0"
description = "ICLR 2026 paper and workshop explorer"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
